--- a/index.html
+++ b/index.html
@@ -489,7 +489,7 @@
         </div>
         <div class="col-xs-12 col-sm-3 text-center">
           <img src="images/qrcode.jpg" alt="QR code" width="124" height="125">
-          <img src="images/maharera.png" alt="Maharera">
+          <img src="images/Maharera.png" alt="Maharera">
         </div>
       </div>
     </div>
@@ -499,4 +499,5 @@
   <script type="text/javascript" src="js/main.js"></script>
   <script type="text/javascript" src="js/baguetteBox.min.js"></script>
 </body>
+
 </html>
